--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,19 @@
                 <artifactId>duplicate-finder-maven-plugin</artifactId>
                 <version>1.2.1</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>${tomcat-server-url}</url>
+                    <username>${tomcat-username}</username>
+                    <password>${tomcat-password}</password>
+                    <path>/${project.artifactId}</path>
+                    <uriEncoding>UTF-8</uriEncoding>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
