--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-security.basic.enabled: false
+#security.basic.enabled: false
 # demo only:
-security.user.password: password
+#security.user.password: password
 logging.level.org.springframework.security: INFO
 logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
 
