Continue working on adding force user logout

--- a/test-spring-boot-security-session/src/main/resources/application.properties
+++ b/test-spring-boot-security-session/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #security.basic.enabled: false
 # demo only:
 #security.user.password: password
-logging.level.org.springframework.security: INFO
+logging.level.org.springframework.security: DEBUG
 logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
 
 #server.port = 8443
